Create: footer section, article main section and responsive

--- a/index.html
+++ b/index.html
@@ -5,6 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Universal</title>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet"> 
+  <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="img/favicon/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="img/favicon/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="img/favicon/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="img/favicon/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="img/favicon/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="img/favicon/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+  <link rel="manifest" href="img/favicon/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="img/favicon/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
   <link rel="stylesheet" href="css/jquery.fancybox.min.css">
   <link rel="stylesheet" href="css/swiper.min.css">
   <link rel="stylesheet" href="css/style.css">
@@ -697,7 +714,88 @@
     <!-- /.container -->
   </div>
   <!-- /.news-bottom -->
+  <div class="footer">
+    <div class="container footer-grid">
+      <div class="footer__subscribe footer__grid-1">
+        <h2 class="footer__subscribe-title">Subscribe now and get 20% off</h2>
+        <form action="send.php" method="POST" class="footer__subscribe-form">
+          <div class="footer__subscribe-input-group">
+            <input required type="email" class="footer__subscribe-input" placeholder="Enter your email">
+          </div>
+          <button class="footer__subscribe-button"><span>Subscribe</span></button>
+        </form>
+      </div>
+      <!-- /.subscribe -->
+      <ul class="footer__list footer__grid-2">
+        <h2 class="footer__title">News</h2>
+        <li class="footer__list-item"><a href="#" class="footer__link">Nation</a></li>
+        <li class="footer__list-item"><a href="#" class="footer__link">World</a></li>
+        <li class="footer__list-item"><a href="#" class="footer__link">Politics</a></li>
+        <li class="footer__list-item"><a href="#" class="footer__link">Solar Eclipse</a></li>
+      </ul>
+      <ul class="footer__list footer__grid-3">
+        <h2 class="footer__title">Arts</h2>
+        <li class="footer__list-item"><a href="#" class="footer__link">Art & Design</a></li>
+        <li class="footer__list-item"><a href="#" class="footer__link">Movies</a></li>
+        <li class="footer__list-item"><a href="#" class="footer__link">People</a></li>
+        <li class="footer__list-item"><a href="#" class="footer__link">Video: Arts</a></li>
+        <li class="footer__list-item"><a href="#" class="footer__link">Theater</a></li>
+      </ul>
+      <ul class="footer__list footer__grid-4">
+        <h2 class="footer__title">Travel</h2>
+        <li class="footer__list-item"><a href="#" class="footer__link">Destinations</a></li>
+        <li class="footer__list-item"><a href="#" class="footer__link">Flights</a></li>
+        <li class="footer__list-item"><a href="#" class="footer__link">Business Travel</a></li>
+      </ul>
+      <ul class="footer__list footer__grid-5">
+        <h2 class="footer__title">Sports</h2>
+        <li class="footer__list-item"><a href="#" class="footer__link">Olympics</a></li>
+        <li class="footer__list-item"><a href="#" class="footer__link">Motor Sports</a></li>
+        <li class="footer__list-item"><a href="#" class="footer__link">Volleyball</a></li>
+        <li class="footer__list-item"><a href="#" class="footer__link">MMA</a></li>
+        <li class="footer__list-item"><a href="#" class="footer__link">Cycling</a></li>
+      </ul>
+      <ul class="footer__list footer__grid-6">
+        <h2 class="footer__title">Tech</h2>
+        <li class="footer__list-item"><a href="#" class="footer__link">Tech</a></li>
+        <li class="footer__list-item"><a href="#" class="footer__link">Tech Columnists</a></li>
+        <li class="footer__list-item"><a href="#" class="footer__link">Tech Reviews</a></li>
+        <li class="footer__list-item"><a href="#" class="footer__link">Talking Tech</a></li>
+      </ul>
+      <ul class="footer__list footer__grid-7">
+        <h2 class="footer__title">Moneys</h2>
+        <li class="footer__list-item"><a href="#" class="footer__link">Markets</a></li>
+        <li class="footer__list-item"><a href="#" class="footer__link">Business</a></li>
+        <li class="footer__list-item"><a href="#" class="footer__link">Personal Finance</a></li>
+        <li class="footer__list-item"><a href="#" class="footer__link">Retirement</a></li>
+        <li class="footer__list-item"><a href="#" class="footer__link">Careers</a></li>
+      </ul>
+      <div class="footer__navbar footer__grid-8">
+        <div class="footer__navbar-left">
+          <a href="index.html"><img src="img/universal.png" alt="Image: Universal Logo" class="footer__navbar-logo"></a>
+          <a href="#" class="footer__navbar-link">Contact Us</a>
+          <a href="#" class="footer__navbar-link">Work with Us</a>
+          <a href="#" class="footer__navbar-link">Advertise</a>
+          <a href="#" class="footer__navbar-link">Your Ad Choise</a>
+        </div>
+        <div class="footer__navbar-right ">
+          <a href="https://www.facebook.com/"><img src="img/facebook.png" alt="Image: Facebook" class="footer__navbar-img"></a>
+          <a href="https://twitter.com"><img src="img/twitter.png" alt="Image: Twitter" class="footer__navbar-img"></a>
+          <a href="https://www.youtube.com/"> <img src="img/youtube.png" alt="Image: Youtube" class="footer__navbar-img"></a>
+          <a href="https://www.instagram.com/"><img src="img/instagramm.png" alt="Image: Instagramm" class="footer__navbar-img--last"></a>
+        </div>
+      </div>
+      <!-- /.footer__navbar -->
+      <div class="footer__bottom footer__grid-9">
+        <span class="footer__bottom-left">Universal’s business concept is to offer fashion and quality at the best price in a sustainable way. Universal has since it was founded in 2015 grown into one of the world's leading fashion companies.</span>
+        <span class="footer__bottom-right">© 2019 Universal UI Kit</span>
+      </div>
+    </div>
+    <!-- /.container -->
+  </div>
+  <!-- /.footer -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+  <script src="js/jquery.validate.min.js"></script>
   <script src="js/jquery.fancybox.min.js"></script>
   <script src="js/swiper.min.js"></script>
   <script src="js/main.js"></script>
